<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        tools:context=".ui.CoroutinesActivity"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewCoroutinesMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/autour_one"
                android:text="@string/third_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonCoroutinesMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/autour_one"
                android:text="@string/download"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCoroutinesMain" />

            <TextView
                android:id="@+id/textViewDownloadCoroutinesMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/app_name"
                android:visibility="gone"
                android:textAlignment="center"
                android:padding="8dp"
                android:fontFamily="@font/autour_one"
                app:layout_constraintEnd_toEndOf="@+id/textViewCoroutinesMain"
                app:layout_constraintStart_toStartOf="@+id/textViewCoroutinesMain"
                app:layout_constraintTop_toBottomOf="@+id/buttonCoroutinesMain" />

            <Button
                android:id="@+id/buttonGoToMainCoroutines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/go"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewGoRetrofitCoroutinesMain"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/go_to_retrofit"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/autour_one"
                android:padding="8dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@android:drawable/button_onoff_indicator_off"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoToMainCoroutines"
                app:layout_constraintEnd_toEndOf="@+id/buttonGoToMainCoroutines"
                app:layout_constraintStart_toStartOf="@+id/buttonGoToMainCoroutines" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>