<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="student"
            type="br.com.raveline.coroutinesstudy.data.model.Student" />

        <variable
            name="mViewModel"
            type="br.com.raveline.coroutinesstudy.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editTextNumberMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="true"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/type_a_number"
            android:inputType="number"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewNameMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewNameMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewMain"
            app:layout_constraintEnd_toEndOf="@+id/textViewMain"
            app:layout_constraintStart_toStartOf="@+id/textViewMain"
            tools:text="@{student.name}" />

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNameMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:autofillHints="true"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/insert_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMain" />

        <Button
            android:id="@+id/buttonSubmitMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{()->mViewModel.sumNumber(editTextNumberMain.getText().toString())}"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="@+id/editTextNameMain"
            app:layout_constraintStart_toStartOf="@+id/editTextNameMain"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameMain" />

        <Button
            android:id="@+id/buttonSecondMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/go"
            app:layout_constraintEnd_toEndOf="@+id/buttonSubmitMain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSubmitMain" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>