<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SecondNavigationFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSecondNavigationFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/autour_one"
            android:padding="8dp"
            android:text="@string/aceito_os_termos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:drawableStartCompat="@color/cardview_shadow_end_color" />

        <EditText
            android:id="@+id/editTextSecondNavigationFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/digite_algo"
            android:inputType="textPersonName"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewSecondNavigationFragment"
            app:layout_constraintStart_toStartOf="@+id/textViewSecondNavigationFragment"
            app:layout_constraintTop_toBottomOf="@+id/textViewSecondNavigationFragment" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSecondNavigationFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:backgroundTint="#2B2B2C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextSecondNavigationFragment"
            app:layout_constraintStart_toStartOf="@+id/editTextSecondNavigationFragment"
            app:layout_constraintTop_toBottomOf="@+id/editTextSecondNavigationFragment"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>