<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ThirdNavigationFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewThirdNavigationFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/autour_one"
            android:padding="8dp"
            android:text="@string/third_message"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.37" />

        <EditText
            android:id="@+id/editTextThirdNavigationFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/digite_algo"
            android:inputType="textPersonName"
            android:paddingHorizontal="8dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textViewThirdNavigationFragment"
            app:layout_constraintStart_toStartOf="@+id/textViewThirdNavigationFragment"
            app:layout_constraintTop_toBottomOf="@+id/textViewThirdNavigationFragment" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabThirdNavigationFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:backgroundTint="#C51162"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextThirdNavigationFragment"
            app:layout_constraintStart_toStartOf="@+id/editTextThirdNavigationFragment"
            app:layout_constraintTop_toBottomOf="@+id/editTextThirdNavigationFragment"
            app:tint="@color/white"
            android:contentDescription="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>