<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clientViewModel"
            type="br.com.raveline.coroutinesstudy.viewmodel.ClientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RoomRetrofitActivity">

        <EditText
            android:id="@+id/etNameRoomActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="true"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingVertical="8dp"
            android:text="@={clientViewModel.inputName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etMailRoomActivity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="true"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/autour_one"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingVertical="8dp"
            android:text="@={clientViewModel.inputEmail}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNameRoomActivity" />

        <ImageView
            android:id="@+id/ivDeleteRoomActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            android:onClick="@{()->clientViewModel.clearAllOrDelete()}"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toBottomOf="@+id/etMailRoomActivity"
            app:srcCompat="@drawable/ic_baseline_delete_sweep_24" />

        <ImageView
            android:id="@+id/ivEditRoomActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/app_name"
            android:onClick="@{()->clientViewModel.saveOrUpdate()}"
            app:layout_constraintEnd_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/ivDeleteRoomActivity"
            app:srcCompat="@drawable/ic_baseline_design_services_24" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="#0097A7"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDeleteRoomActivity" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewRoomActivity"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclervRoomActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:listitem="@layout/item_room_adapter" />
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBarRoomActivity"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>